--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,44 @@
 
   <groupId>org.furyio</groupId>
   <artifactId>dubbo-serialization-fury</artifactId>
-  <version>0.2.0-SNAPSHOT</version>
+  <version>0.1.1</version>
   <packaging>jar</packaging>
   <name>dubbo-serialization-fury</name>
   <description>The fury serialization module of dubbo project</description>
+
+  <url>https://github.com/fury-project/dubbo-serialization-fury</url>
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+  <scm>
+    <url>https://github.com/fury-project/dubbo-serialization-fury</url>
+    <connection>git@github.com:fury-project/dubbo-serialization-fury.git</connection>
+    <developerConnection>scm:git:ssh://github.com:fury-project/dubbo-serialization-fury.git</developerConnection>
+  </scm>
+  <developers>
+    <developer>
+      <organizationUrl>https://furyio.org</organizationUrl>
+    </developer>
+    <developer>
+      <name>chaokunyang</name>
+      <email>shawn.ck.yang@gmail.com</email>
+      <url>https://github.com/chaokunyang</url>
+    </developer>
+  </developers>
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
+
   <properties>
     <skip_maven_deploy>false</skip_maven_deploy>
   </properties>
@@ -39,7 +73,7 @@
     <dependency>
       <groupId>org.furyio</groupId>
       <artifactId>fury-core</artifactId>
-      <version>0.1.0</version>
+      <version>0.1.1</version>
     </dependency>
   </dependencies>
   <build>
